# kow-london.co.uk

./: .gitignore  LICENSE  README.md  TODO.md  index.html
backend/: generate-events.py  pyproject.toml
design/: favicon.xcf
infrastructure/: amplify.tf  dynamodb.tf  locals.tf  s3.tf  terraform.tf
static/: index.html  main.js  package-lock.json  package.json  robots.txt  sitemap.xml  style.css  vite.config.js
static/event-map/: index.html  main.js  style.css  venues.json
static/scss/: custom.scss
