[tool.poetry]
name = "kow-london-backend"
version = "0.1.0"
description = ""
authors = ["Dave Randall <19395688+daveygit2050@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.10"
geopy = "^2.2.0"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
